<resources>
    <string name="browser_key">AIzaSyCqaMI2mMOrbXkaiiKZqrtVYayvRd9qtCA</string>
    <string name="release_key">AIzaSyD0x_1I1ivF0g7g7xm0lH9XW3Rg2oMJi68</string>
    <string name="debug_key">AIzaSyCHwGInDLbtWPp_t2LdKFRD_18j_6RIldA</string>
    <string name="app_name">Tubewell</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="str_rb_normal">Normal</string>
    <string name="str_rb_satellite">Satellite</string>
    <string name="str_rb_terrain">Terrain</string>

    <string name="services">SERVICES</string>
    <string name="contact">CONTACT</string>
    <string name="login_signup">SIGNUP</string>
    <string name="sync">SYNC</string>
    <string name="offline">OFFLINE</string>
    <string name="sync_data">Sync Data</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_Advisory">Advisory Activity</string>
    <string name="title_activity_live_cotton">Plant Doctor</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_add_farm_map">Map</string>
    <string name="title_activity_mandi_detail_on_map">Map</string>

    <string name="network_not_available">Check Newtork Connection</string>
    <string name="title_activity_navigation_drawer">Cotton Doctor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="toast_crash">Tubewell has been crashed</string>
    <string name="advisory">Advisory</string>
    <string name="search">Search</string>
    <string name="no_device">You don\'t have any irrigation system associated with your account.\n Do you want to update number?</string>
    <string name="update_device">You have already irrigation system associated with your account.\n Do you want to update number?</string>
    <string name="start">Your irrigation already started.\n Do you want to Off?</string>
    <string name="moisture_txt">Soil moisture in your field is too low.\n Do you want to start irrigation?</string>

    <string-array name="nutritionCrop">
        <item>Select Crop</item>
        <item>Cotton</item>
        <item>Wheat</item>
        <item>Paddy</item>
        <item>Kinnow</item>
    </string-array>

    <string-array name="nutritionStatus">
        <item>Select Status</item>
        <item>Fertile</item>
        <item>Low Fertile</item>
    </string-array>

    <string-array name="irrigation">
        <item>Select Irrigation</item>
        <item>Good Irrigation</item>
        <item>Rainfed</item>
        <item>Protective Irrigation</item>
    </string-array>

    <string-array name="soil">
        <item>Select Soil</item>
        <item>Clayey</item>
        <item>Loamy</item>
        <item>Sandy</item>
    </string-array>





</resources>
