<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <item
        android:id="@+id/action_login"
        android:title="LOGIN"
        android:icon="@drawable/action_login"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_services"
        android:orderInCategory="100"
        android:title="@string/services"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_signup"
        android:orderInCategory="100"
        android:title="@string/login_signup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/sync"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_offline"
        android:orderInCategory="100"
        android:title="@string/offline"
        android:visible="false"
        app:showAsAction="never" />


</menu>
